fix: negative margin on headings covering links

--- a/src/components/illustrationList/illustrationList.module.css
+++ b/src/components/illustrationList/illustrationList.module.css
@@ -9,9 +9,8 @@
 .illustrationList h3 {
   padding-top: 0;
   margin: 0;
-  margin-top: -6rem;
-  padding-top: 6rem;
   line-height: 1;
+  scroll-margin-top: 6rem;
 }
 
 .illustrationList__flex {
